--- a/NVL-HTML-P7b.html
+++ b/NVL-HTML-P7b.html
@@ -125,20 +125,19 @@ Conjunto de normas éticas que deben utilizarse en Internet. La Netiqueta no es 
 <p>&nbsp;</p>
 <p><a name="#Ñ" style="color:#000000">Ñ</a>
 </p>
-<h4 style="color:#1900f9"> CLOUD</h4>
-También conocido como &ldquo;La Nube&rdquo;. Se refiere al alojamiento de información en Internet. El contrario sería el alojamiento de datos en un equipo físico como un ordenador portátil o de sobremesa.
-<h4 style="color:#1900f9"> CROWDSOURCING</h4>
-Colaboración abierta distribuida. Consiste en externalizar tareas a un grupo de personas o una comunidad, a través de una convocatoria abierta (normalmente online)
-</div><div align="justify">
+<h4 style="color:#1900f9"> ÑAPA</h4>
+Añadidura, especialmente la que se da como propina o regalo.
+<h4 style="color:#1900f9">&nbsp;</h4>
+</div>
+<div align="justify">
 <p>&nbsp;</p>
 <p><a name="#O" style="color:#000000">O</a>
 </p>
 <h4 style="color:#1900f9">OSS</h4>
 Siglas de Open Source Software (Software de Código Abierto en español). Se trata de aplicaciones informáticas con derechos de autor públicos. Por tanto, cualquier persona puede usarlos y editarlos libremente.
-<h4 style="color:#1900f9"> CROWDSOURCING</h4>
-Colaboración abierta distribuida. Consiste en externalizar tareas a un grupo de personas o una comunidad, a través de una convocatoria abierta (normalmente online)
-</div><div align="justify">
-<p>&nbsp;</p>
+<h4 style="color:#1900f9">&nbsp;</h4>
+</div>
+<div align="justify">
 <p><a name="#P" style="color:#000000">P</a>
 </p>
 <h4 style="color:#1900f9"> PLE</h4>
